syntax = "proto3";

package jobs.v1;

import "tagger/tagger.proto";
import "validate/validate.proto";

message CreateInstallRequest {
  string install_id = 1 [
    (validate.rules).string.uuid = true,
    (tagger.tags) = "faker:\"uuid\""
  ];
  string org_id = 2 [
    (validate.rules).string.uuid = true,
    (tagger.tags) = "faker:\"uuid\""
  ];
  string sandbox_version = 3 [
    (validate.rules).string.uuid = true,
    (tagger.tags) = "faker:\"uuid\""
  ];
}

message CreateInstallResponse {}
